# Optimization_Ex

./: .gitignore  CMakeLists.txt  Readme.md
docu/: exercise1.tex  exercise1.xdv
src/: ceres_hello_world.cpp  ceres_rosenbrock_num_diff.cpp  ex1.cpp
